test/errors/const3.ls

#OUTPUT
#Syntax Error: Expected assignment operator.
# -> [10] const int myconst 20
#
#END

#RET 0

const int myconst 20

extern func printf(s:str, ...)

func main -> int
begin
    return 0
end
